Lab2_DE10/software/.metadata/.plugins/org.eclipse.cdt.ui/Lab2.build.log
22:12:52 **** Incremental Build of configuration Nios II for project Lab2 ****
make all 
Info: Building ../Lab2_bsp/
K:/Quartus18/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../Lab2_bsp/
[BSP build complete]
Info: Compiling hello_world.c to obj/default/hello_world.o
nios2-elf-gcc -xc -MP -MMD -c -I../Lab2_bsp//HAL/inc -I../Lab2_bsp/ -I../Lab2_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world.o hello_world.c
hello_world.c: In function 'main':
hello_world.c:10:16: error: expected ')' before ';' token
 #define GATE 60;
                ^
hello_world.c:15:33: note: in expansion of macro 'GATE'
      PIO_LED_REG = (PIO_SW_REG>=GATE)?0xF0:0x0F;
                                 ^
make: *** [obj/default/hello_world.o] Error 1

22:12:53 Build Finished (took 1s.484ms)

